Set min and max height and width to fix bug on smaller screens

--- a/weathercast-frontend/src/App.css
+++ b/weathercast-frontend/src/App.css
@@ -15,8 +15,11 @@ body {
 .outer-container {
   background-color: white;
   max-width: 1450px;
+  min-width: 1400px;
   width: 100%;
-  height: 90vh;
+  height: 85vh;
+  min-height: 840px;
+  max-height: 850px;
   margin: 50px auto;
   border-radius: 40px;
   display:flex;
